Bug Fixes + QOL Changes
Bug Fixes:
- Fixed a bug where messages would appear twice from the sender's end

*Note*
I changed the way that messages appear on the sender's end. It will no longer show as being from "You", instead it will show as being from your username

QOL Changes
- I changed the login and register buttons to change color on hover, and have a little ring around them when you click them. I was having issues getting them to change color on click because for some reason "active:bg-blue-600" was not working. The ring is what I came up with as a placeholder until I can fix that.
- Added some comments for organization

--- a/SecureChat/index.html
+++ b/SecureChat/index.html
@@ -15,11 +15,13 @@
 
         <!-- register form & login form -->
         <div id="auth-section" class="p-4 bg-white shadow-md rounded-lg">
-            <h2 class="text-xl font-semibolf mb-2">Register /Login</h2>
+            <h2 class="text-xl font-semibold mb-2">Register / Login</h2>
             <input id="username" type="text" placeholder="Username" class="border px-3 py-2 mb-2 w-full rounded"/>
             <input id="password" type="password" placeholder="Password" class="border px-3 py-2 mb-2 w-full rounded"/>
-            <button onclick="register()" class="bg-green-500 text-white px-4 py-2 rounded w-full mb-2">Register</button>
-            <button onclick="login()" class="bg-blue-500 text-white px-4 py-2 rounded w-full">Login</button>
+            <button onclick="register()" class="bg-green-500 text-white px-4 py-2 rounded w-full mb-2 
+                hover:bg-green-600 transition-colors focus:ring-2 focus:ring-green-300">Register</button>
+            <button onclick="login()" class="bg-blue-500 text-white px-4 py-2 rounded w-full 
+                hover:bg-blue-600 transition-colors focus:ring-2 focus:ring-blue-300">Login</button>
             <p id="auth-error" class="text-red-500 mt-2 text-sm hidden"></p>
         </div>
 
@@ -28,9 +30,12 @@
             <div id="chat-box" class="p-3 overflow-auto">
                 <!-- This is where the messages will go -->
             </div>
+            <!-- This is the div that holds the message and send button -->
             <div class="flex">
+                <!-- This is the message box -->
                 <input id="message" type="text" class="px-3 w-full border-t border-gray-300 outline-none text-gray-700" 
                 placeholder="Type your message..." />
+                <!-- This is the send button -->
                 <button class="px-8 py-3 bg-green-500 text-white hover:bg-green-600 transition-colors" onclick="sendMessage()">Send</button>
             </div>
         </div>
@@ -82,8 +87,6 @@
                 if (!message || !token) return showError("You must be logged in to send a message.");
 
                 ws.send(JSON.stringify({ type: "message", token, data: message }));
-
-                addMessage(`You: ${message}`);
                 document.getElementById("message").value = "";
             }
 
