--- a/SecureChat/index.html
+++ b/SecureChat/index.html
@@ -8,6 +8,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+        <script defer src="app.js"></script>
     </head>
 
     <body class = "flex flex-col items-center justify-center h-screen bg-gray-100">
@@ -27,6 +28,13 @@
 
         <!-- Chat section(Hidden until logged in)-->
         <div id="chat-section" class="h-screen w-screen flex flex-col justify-between hidden">
+            <!-- This is the section that controls who you are sending messages to -->
+            <div class="p-4 border rounded w-full flex items-center space-x-2 bg-gray-100">
+                <label for="recipient" class="font-semibold">Send To:</label>
+                <select id="recipient" class="p-2 border rounded bg-white">
+                    <option value="all">All</option>
+                </select>
+            </div>
             <div id="chat-box" class="p-3 overflow-auto">
                 <!-- This is where the messages will go -->
             </div>
@@ -39,88 +47,5 @@
                 <button class="px-8 py-3 bg-green-500 text-white hover:bg-green-600 transition-colors" onclick="sendMessage()">Send</button>
             </div>
         </div>
-
-        <script>
-            // Make sure this is the same port as the one in index.js
-            const ws = new WebSocket("ws://localhost:3000");
-            let token = "";
-
-            ws.onopen = () => console.log("Connected to the server>");
-            ws.onmessage = (event) => {
-                const data = JSON.parse(event.data);
-
-                if (data.type === "auth"){
-                    token = data.token;
-                    console.log("token stored: ",token);
-                    username = document.getElementById("username").value;
-                    console.log(`Logged in as ${username}`);
-                    alert("Logged in Successfully!");
-                    document.getElementById("auth-section").classList.add("hidden");
-                    document.getElementById("chat-section").classList.remove("hidden");
-                } else if (data.type === "message") {
-                    if(!document.getElementById(data.data)) {
-                        addMessage(data.data);
-                    }
-                } else if (data.type === "error") {
-                    alert(data.message);
-                }
-            };
-            
-            // register a new user (victoria)
-            function register() {
-                const username = document.getElementById("username").value;
-                const password = document.getElementById("password").value;
-                if (!username || !password) return showError("Please enter a username and password.");
-                ws.send(JSON.stringify({ type: "register", username, password }));
-            }
-
-            // user authentication (login) (victoria)
-            function login() {
-                const username = document.getElementById("username").value;
-                const password = document.getElementById("password").value;
-                if (!username || !password) return showError("Please enter a username and password.");
-                ws.send(JSON.stringify({ type: "login", username, password }));
-            }
-
-            function sendMessage() {
-                const message = document.getElementById("message").value;
-
-                // This will catch if the user just clicks the send button with nothing in the text box
-                if (!message || !token) return showError("You must be logged in to send a message.");
-
-                const recipient = "Bob"; //replace with real recipient logic 
-                ws.send(JSON.stringify({ 
-                    type: "message", 
-                    token: token, 
-                    recipient: recipient, 
-                    data: message }));
-                addMessage(`You: ${message}`);
-                document.getElementById("message").value = "";
-            }
-
-            document.getElementById("message").addEventListener("keydown", function(event) {
-                if (event.key === "Enter") {
-                    event.preventDefault();
-                    sendMessage();
-                }
-            });
-
-            function addMessage(message) {
-                const node = document.createElement("P");
-                const text = document.createTextNode(message);
-
-                node.appendChild(text);
-                node.classList.add("text-gray-700", "py-1");
-
-                // This will add the message to the chat on the users' screen
-                document.getElementById("chat-box").appendChild(node);
-            }
-
-            function showError(message) {
-                const errorElement = document.getElementById("auth-error");
-                errorElement.textContent = message;
-                errorElement.classList.remove("hidden");
-            }
-        </script>
     </body>
 </html>
