--- a/SecureChat/Client/index.html
+++ b/SecureChat/Client/index.html
@@ -9,6 +9,8 @@
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
         <title>SecureChat</title>
         <link rel="stylesheet" href="index.css" />
+        <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <script defer src="app.js"></script>
     </head>
 
@@ -20,6 +22,10 @@
             <h2>Register / Login</h2>
             <input id="username" type="text" placeholder="Username" />
             <input id="password" type="password" placeholder="Password" />
+          
+            <!-- reCAPTCHA widget -->
+            <div class="g-recaptcha" data-sitekey="6LcuJTIrAAAAAJKjbtRKPasm0HOi7x1r_qSRVcCs"></div>
+          
             <button onclick="register()" class="register">Register</button>
             <button onclick="login()" class="login">Login</button>
             <p id="auth-error"></p>
