--- a/SecureChat/Client/index.html
+++ b/SecureChat/Client/index.html
@@ -36,7 +36,7 @@
           
             <!-- reCAPTCHA widget -->
             <!-- <div class="g-recaptcha" data-sitekey="6LcuJTIrAAAAAJKjbtRKPasm0HOi7x1r_qSRVcCs"></div> -->
-            <div class="g-recaptcha" data-sitekey="6Le-UDIrAAAAAIM4PgwC78XkuepO-nmPU-4BuIkm"></div>
+            <!-- <div class="g-recaptcha" data-sitekey="6Le-UDIrAAAAAIM4PgwC78XkuepO-nmPU-4BuIkm"></div> -->
 
           
             <button onclick="register()" class="register">Register</button>
